src/test/ui/parser/removed-syntax-mut-vec-ty.stderr
error: expected type, found keyword `mut`
  --> $DIR/removed-syntax-mut-vec-ty.rs:3:11
   |
LL | type v = [mut isize]; //~ ERROR expected type, found keyword `mut`
   |           ^^^

error: aborting due to previous error

