src/test/ui/parser/removed-syntax-mut-vec-ty.rs
type v = [mut isize]; //~ ERROR expected type, found keyword `mut`
